--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 wikiurl: "https://wiki.hs3.pl/"
 github_username:  hs3city
 
-collections:
-  events:
-    output: true
-    permalink: /:collection/:year/:slug
+permalink: /:collection/:year/:slug
+
 
 # Build settings
 markdown: kramdown
@@ -36,6 +34,7 @@ plugins:
   - jekyll-feed
   - jekyll-menus
   - jekyll-tidy
+  - jekyll-redirect-from
 
 # sass:
 #   sass_dir: _sass
