--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,9 +1,9 @@
 ---
 quick:
-  - url: //wiki.hs3.pl
+  - url: //wiki.hsp.sh
     title: wiki
   - url: //fb.me/hackerspacetrojmiasto
     title: fb
-  - url: //github.com/hs3city
+  - url: //github.com/hspsh
     title: git
 ---
