--- a/netlify.toml
+++ b/netlify.toml
@@ -45,6 +45,10 @@
 [[redirects]]
   from = "/slack"
   to = "https://join.slack.com/t/hs3city/shared_invite/zt-kstnlyol-AjDRGHUqfK1GVYvi99G47g"
+ 
+[[redirects]]
+  from = "/discord"
+  to = "https://discord.gg/2VZfQVejVP"
 
 [[headers]]
   for = "/.well-known/*"
